--- a/assets/thema/css/custom2.css
+++ b/assets/thema/css/custom2.css
@@ -60,3 +60,113 @@
 #main h4#logo {
 	font-family: 'Bree Serif', serif;
 }
+
+/* ここからモーダル関連(城所)*/
+#contents {
+  z-index: 0;
+  font-size: 16px;
+}
+.page-txt {
+  margin: 30px 0 0;
+  height: 2000px;
+}
+/* モーダル コンテンツエリア(記事) */
+#modal-open {
+  color: #cc0000;
+}
+/* モーダル コンテンツエリア(グッズ) */
+#modal-open2 {
+  color: #cc0000;
+}
+/* モーダル コンテンツエリア(使い方) */
+#modal-open3 {
+  color: #cc0000;
+}
+/* モーダル コンテンツエリア(記事) */
+#modal-main {
+  display: none;
+  width: 680px;
+  height: 500px;
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
+  color: #666666;
+  position:fixed;
+  z-index: 2;
+}
+/* モーダル コンテンツエリア2(グッズ) */
+#modal-main2 {
+  display: none;
+  width: 680px;
+  height: 500px;
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
+  color: #666666;
+  position:fixed;
+  z-index: 2;
+}
+/* モーダル コンテンツエリア3(使い方) */
+#modal-main3 {
+  display: none;
+  width: 680px;
+  height: 100px;
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
+  color: #666666;
+  position:fixed;
+  z-index: 2;
+}
+/* モーダル 背景エリア */
+#modal-bg {
+  display:none;
+  width:100%;
+  height:100%;
+  background-color: rgba(0,0,0,0.5);
+  position:fixed;
+  top:0;
+  left:0;
+  z-index: 1;
+}
+
+/*モーダル 画像*/
+.minitopi1 img{
+ vertical-align:middle;
+}
+
+.tomato img{
+ vertical-align:middle;
+}
+
+.hiyake img{
+ vertical-align:middle;
+}
+
+.oronine img{
+ vertical-align:middle;
+}
+
+.cute img{
+ vertical-align:middle;
+}
+
+.first img{
+ vertical-align:middle;
+}
+
+.second img{
+ vertical-align:middle;
+}
+
+.third img{
+ vertical-align:middle;
+}
+
+.fourth img{
+ vertical-align:middle;
+}
+
+.fifth img{
+ vertical-align:middle;
+}
