--- a/assets/thema/css/custom.css
+++ b/assets/thema/css/custom.css
@@ -65,9 +65,27 @@
 }
 
 
-/* ====================================================
-  btn04
- ==================================================== */
+    #footer .block {
+        padding: 10px;
+        color: #555;
+        position: absolute;
+        bottom: 0;
+        right: 10px;
+        /*background: #fff;*/
+        /*border: 1px #ccc solid;*/
+        /*box-shadow: 0 2px 3px 0 #ddd;*/
+        /*-moz-box-shadow: 0 2px 3px 0 #ddd;*/
+        /*-webkit-box-shadow: 0 2px 3px 0 #ddd;*/
+    }
+    #footer .block span{
+        padding: 0 6px;
+        font-size: 90px;
+        color:#28a371;
+    }
+
+    /* ====================================================
+      btn04
+     ==================================================== */
 .btn04 {
     margin: 0 auto;
     color: #fff;
